removed creation of blogs
